--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,11 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.sparkjava:spark-core:2.5.4'
+    compile group: 'com.sparkjava', name: 'spark-template-freemarker', version: '2.3'
+    compile 'org.freemarker:freemarker:2.3.26'
+    compile 'com.sparkjava:spark-debug-tools:0.5'
+    // https://mvnrepository.com/artifact/org.webjars/bootstrap
+    compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7'
+
+
 }
