--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,12 @@ dependencies {
 
 }
 defaultTasks = ['clean']
-task stage (dependsOn: ['clean','installApp'])
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/lib"
+    from(configurations.compile)
+}
+
+stage.dependsOn(copyToLib)
