--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = 'sparkcred1'
+archivesBaseName = 'Spark'
 version='1.0'
-applicationName = 'sparkcred1'
+applicationName = 'Spark'
 mainClassName = 'main'
 
 sourceCompatibility = 1.8
@@ -16,12 +16,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.sparkjava:spark-core:2.5.4'
-    compile group: 'com.sparkjava', name: 'spark-template-freemarker', version: '2.3'
-    compile 'org.freemarker:freemarker:2.3.26'
-    compile 'com.sparkjava:spark-debug-tools:0.5'
-    compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7'
-    compile "com.heroku.adk:heroku-jdbc:0.1.1"
+    compile 'com.sparkjava:spark-core:2.6.0'
+    compile 'com.sparkjava:spark-template-freemarker:2.5.5'
+    compile 'org.freemarker:freemarker:2.3.26-incubating'
     compile 'org.slf4j:slf4j-simple:1.7.21'
 
 }
