--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,7 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.21'
 
 }
+
 defaultTasks = ['clean']
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
+task stage(dependsOn: ['clean', 'installApp'])
 
-task copyToLib(type: Copy) {
-    into "$buildDir/lib"
-    from(configurations.compile)
-}
-
-stage.dependsOn(copyToLib)
